versioned_docs/version-1.18.x/wiki/mods/skyblock-builder/packdev/config/spawn.mdx
---
description: Define the main settings for islands
---

import ToggleImage from "@site/src/components/ToggleImage";

# Spawn
## Spawn Protection Radius
This sets the radius around the spawn which should be protected and only op players can interact with.
This prevents (tool) interactions, mob griefing, explosions, breaking blocks, farmland trampling, growing crops, and
attacking. Additionally, the player will always have max health, max food level, can't drown, and can't be set on fire.
This is default set to 0, so nothing is protected. Look at the image here to see more options:

<ToggleImage src="/img/projects/skyblock-builder/config/spawn_protection_radius.png" alt="Spawn Protection Radius" />

## Dimension
Defines the dimension where you will spawn, and the island will be generated.  
You can pick any dimension listed in the `config/skyblockbuilder/data/dimensions.txt` file.

:::info
The `dimensions.txt` file is only created after you join a Skyblock world.
:::

## Height
### Range
You can set the spawn height using a range from `minY` (minimum height) to `maxY` (maximum height):
- **`minY`**: The lowest possible spawn position.
- **`maxY`**: The highest possible spawn position.

:::info
If you're using a fixed spawn height (see [Type](#type) below), only the `minY` value is used. In all other cases, the spawn height will be calculated dynamically.
:::

### Type
Defines how the spawn height is determined. Choose one of the following options:

| Option         | Description                                                                                                                                     |
|----------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
| `set`          | Spawns at a fixed height. Uses the `minY` value from the [Range](#range) as the spawn height. The `maxY` value is ignored.                      |
| `range_top`    | Checks for a valid spawn position starting from `maxY` and moving downwards to `minY`. If none is found, spawns at `maxY`.                      |
| `range_bottom` | Similar to `range_top`, but starts at `minY` and moves upwards to `maxY`. If no valid spot is found, spawns at `minY`.                          |

#### Valid Spawns
A valid spawn location has two empty air blocks above a solid block.  
The solid block can be a normal block, a slab, or any block included in the [valid spawn block tag 🔗](https://minecraft.fandom.com/wiki/Tutorials/Creating_a_data_pack#Tags) `#skyblockbuilder:additional_valid_spawns`.

### Offset
When using a `range` type spawn, an offset can slightly adjust the spawn height:
- Positive values move the spawn position **up**.
- Negative values move it **down**.

## Radius
Specifies the radius within which to find a valid spawn point if the original spawn point is invalid.

Minimum: 0
